hopefully fix footer on mobile

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-html {
+html,
+body {
   width: 100%;
   height: 100%;
-}
-body {
   margin: 0;
   padding: 0;
+}
+body {
   background: #222;
   font-family: monospace;
-  width: 100%;
-  height: 100%;
+  min-height: 100dvh;
 }
 * {
   box-sizing: border-box;
@@ -28,7 +28,7 @@ p {
   line-height: 20px;
 }
 #container {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
